# Soundex

./: .gitignore  CMakeLists.txt  Soundex.cpp  Soundex.h  SoundexTest.cpp
